Accept Analytics events from servers through the API and SDKs
